--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
     <artifactId>jackson-core</artifactId>
     <version>2.13.5</version>
 </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.12.0</version>
+      <scope>test</scope>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
 </project>
